<resources>
    <string name="Your_Coordinator">Your Co-ordinator</string>
    <string name="About_us">About Us</string>
    <string name="Desc">Paani Foundation is a not-for-profit company set up in 2016 by the team of the TV series Satyamev Jayate to fight drought in rural Maharashtra. Water scarcity is largely a man-made condition, and we believe that only people’s efforts can solve the crisis. Paani Foundation aims to harness the power of communication to mobilise, motivate and train people in this mission to eradicate drought. Offering training in scientific watershed management, leadership and community-building, Paani Foundation is now working in roughly 90% of drought-hit Maharashtra. Our flagship project, the Satyamev Jayate Water Cup was instituted in 2016 as a way to encourage villages to apply their training in watershed management. Water Cup 2018 will be held from 8th April to 22nd May 2018</string>
    <string name="Help">Help</string>
    <string name="app_name">Watercup</string>
    <string name="Entercost">Enter total project cost</string>
    <string name="selectImage">Select an image to upload</string>
    <string name="t_name">Enter taluka</string>
    <string name="ph_no">Enter contact number</string>
    <string name="done">Done</string>
    <string name="newProject">New Projects</string>
    <string name="language">Change app language</string>
    <string name="about">About</string>
    <string name="guide">Guide</string>
    <string name="leader">Leaderboard</string>
    <string name="logout">Log out</string>
    <string name="daysRem">Days remaining</string>
    <string name="Entername">Enter project name</string>
    <string name="Enterdesc">Enter project description</string>
    <string name="feedback">Feedb</string>
    <string name="npd">Add new project here</string>
    <string name="vls">View Leaderboard</string>
    <string name="gs">You\'ll get guidance</string>
    <string name="helpE">More help</string>
    <string name="rank">Rank: #</string>
    <string name="points">Points: </string>
    <string name="cap">Choose a project</string>
    <string name="type">"Type:  "</string>
    <string name="progress_diaload">On your marks ...</string>
    <string name="check_Nw">Check Network!</string>
    <string name="phoneShow">"Phone :  "</string>
    <string name="talukaShow">"Taluka :  "</string>
    <string name="wait">Please wait ...</string>
    <string name="login_button">Login</string>
    <string name="reg_form">Registration Form</string>
    <string name="v_name">Enter name of village</string>
    <string name="prop_val">Enter proper values!</string>
    <string name="t_upload">Text Uploaded!</string>
    <string name="err">Error!</string>
    <string name="db_incons">DB inconsistent!</string>
    <string name="signIn">Enter your email</string>
    <string name="pass">Enter your password</string>
</resources>
