<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FormActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:text="@string/reg_form"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/vname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/v_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/taluka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="15dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_no"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:padding="15dp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:text="@string/done"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</LinearLayout>
