<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddProjectActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Spinner
                android:id="@+id/projectType"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="#dedede"
                    android:id="@+id/projectImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <TextView
                    android:id="@+id/msg"
                    android:background="#00000000"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/selectImage" />

            </RelativeLayout>

            <EditText
                android:hint="@string/Entername"
                android:layout_marginTop="15dp"
                android:id="@+id/name"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/Entercost"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/Enterdesc"
                android:layout_marginTop="15dp"
                android:id="@+id/desc"
                android:inputType="textCapSentences|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/doneButton"
                android:layout_marginTop="18dp"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:text="@string/done"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
</ScrollView>