<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="20dp"
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="#000"
        android:textSize="50sp"
        android:fontFamily="cursive"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        style="?android:attr/textAppearanceLarge"
        android:drawableTop="@drawable/app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/signIn"
            android:padding="15dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/pass"
            android:padding="15dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:id="@+id/loginButton"/>

</LinearLayout>